Reworking parts of the documentation

--- a/details.rst.template
+++ b/details.rst.template
@@ -1,7 +1,7 @@
 Detailed Definitions
 ====================
 
-This section details the *SEIS-PROV* types and expected attributes and
+This section details the ``SEIS-PROV``  types and expected attributes and
 constraints.
 
 .. contents::
