--- a/details.rst.template
+++ b/details.rst.template
@@ -19,34 +19,30 @@ activities are used. For an entity or activity to be considered part of
 1. Its ``prov:id`` must live in the ``SEIS-PROV`` namespace and follow a
    certain pattern:
 
+   In addition to being part of the ``SEIS-PROV`` namespace all ids must
+   validate against this regular expression:
 
-   .. admonition:: ids in ``SEIS-PROV``
-      :class: note
+   ``^\d{{3,5}}_[a-z]{{2}}_[a-z0-9]{{7,12}}$``
 
-        In addition to being part of the ``SEIS-PROV`` namespace all ids must
-        validate against this regular expression:
+   Examples are:
 
-        ``^\d{{3,5}}_[a-z]{{2}}_[a-z0-9]{{7,12}}$``
+       * ``001_wf_f84fb9a``
+       * ``027_bs_ea78b46``
 
-        Examples are:
+   An id thus consists of three parts delimited by underscores with the
+   goal of attaining a fairly short but still slightly descriptive
+   identifier:
 
-            * ``001_wf_f84fb9a``
-            * ``027_bs_ea78b46``
-
-        An id thus consists of three parts delimited by underscores with the
-        goal of attaining a fairly short but still slightly descriptive
-        identifier:
-
-        1. A 3 to 5 digit zero padded number. This is intended to further
-           illustrate the sequence of processing steps and events. ``001`` for
-           example is the first step in a processing chain, whereas ``017`` is
-           the seventeenth step. This is not enforced anywhere but nice to have
-           so users are encouraged to adopt this.
-        2. A two letter code depending on the type of entity or activity. This
-           is enforced and part of the ``SEIS-PROV`` definition. Please see the
-           definition of each node for the corresponding two letter code.
-        3. A 7 to 12 letter lowercase alphanumeric hash to ensure uniqueness of
-           ids.
+   A. A 3 to 5 digit zero padded number. This is intended to further
+      illustrate the sequence of processing steps and events. ``001`` for
+      example is the first step in a processing chain, whereas ``017`` is
+      the seventeenth step. This is not enforced anywhere but nice to have
+      so users are encouraged to adopt this.
+   B. A two letter code depending on the type of entity or activity. This
+      is enforced and part of the ``SEIS-PROV`` definition. Please see the
+      definition of each node for the corresponding two letter code.
+   C. A 7 to 12 letter lowercase alphanumeric hash to ensure uniqueness of
+      ids.
 
 2. It must have a certain ``prov:type`` depending on the precise activity or
    entity. Please see the detailed definitions further down for examples.
