--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ _generated
 _build
 _generated_details.rst
 validator/seis_prov_validate/schemas/seis_prov.json
+validator/seis_prov_validate.egg-info
