--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - source activate condaenv
   - conda install --yes python=$TRAVIS_PYTHON_VERSION pytest lxml jsonschema six python-dateutil networkx
   # Build docs on Python 3.4.
-  - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then conda install --yes sphinx ; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then conda install --yes sphinx colorama; fi
   # pydot on 3.4 is a bit tricky.
   - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install https://github.com/nlhepler/pydot/archive/master.zip ; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install sphinx_rtd_theme ; fi
